# util-scripts

./: .editorconfig  .gitignore  README.md  creds  dcbash  drmc  drmi  fx  gfb  gfm  glogg  movie  prune-branches.sh  pyclean.sh  pydiff  pydiff.py  pyproject.toml  repo-config  setup.cfg  todoist.sh  trash  weather
git_hooks/: prepare-commit-msg
src/: .env.template  api.py  fx.py  movie.py  py_diff.py  repo_config.py  set_creds.py  todoist_api.py
src/fx/: fx.py
src/repo_config/: config_data.py  repo_config.py
src/repo_config/repo_config_templates/: editorconfig.template  requirements-dev.txt.template
src/repo_config_templates/: setup.cfg.template
src/set_creds/: set_creds.py
src/todo/: cli.py  config.py
test/: test_set_creds.py
tests/: test_set_creds.py
tests/datasets/: response.py
