[tool.poetry]
name = "set-creds"
version = "0.1.0"
description = "Python script to automate retrieving and setting AWS multi-factor authentication credentials for AWS CLI use."
authors = ["Sam Atkins <samatkins@outlook.com>"]

[tool.poetry.dependencies]
python = "3.7.3"
python-dotenv = "^0.9.1"
requests = "^2.20"
todoist-python = "^8.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.5"
flake8 = "^3.5"
pylint = "^2.3"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
